--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,6 @@
 :root {
     --color-white: #ffffff;
     --color-rich-black: #171717;
+    --color-golden-yellow: #f7d600;
+    --color-lime-green: #76ff03;
 }
