--- a/src/components/FileItem/styles.module.css
+++ b/src/components/FileItem/styles.module.css
@@ -4,6 +4,16 @@
   align-items: center;
 }
 
+.title {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.name {
+  font-size: 14px;
+}
+
 .favorite {
   width: 24px;
   height: 24px;
