--- a/src/components/FileTree/styles.module.css
+++ b/src/components/FileTree/styles.module.css
@@ -8,7 +8,12 @@
 }
 
 .title {
-  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.title h3 {
   font-size: 18px;
   font-weight: 600;
 }
