--- a/src/components/FileTree/styles.module.css
+++ b/src/components/FileTree/styles.module.css
@@ -1,24 +1,103 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 16px 0;
   margin-bottom: 16px;
-  border-bottom: 1px solid var(--color-rich-black);
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 8px;
+    
+    .title {
+      width: 100%;
+    }
+  }
 }
 
 .title {
   display: flex;
   align-items: center;
   gap: 4px;
+  flex: 1;
 }
 
 .title h3 {
   font-size: 18px;
   font-weight: 600;
+  max-width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .buttons {
   display: flex;
   gap: 8px;
+
+  button {
+    width: 150px;
+  }
+
+  @media (max-width: 575px) {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+  }
+}
+
+.upButtonContainer button {
+  font-size: 24px;
+  padding: 0 32px 0 12px;
+}
+
+.listContainer {
+  flex: 1;
+  overflow: hidden;
+}
+
+.list {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.listItem {
+  border-bottom: 1px dotted var(--color-light-gray);
+  transition: background-color 0.2s ease;
+  &:hover {
+    background-color: var(--color-light-gray);
+  }
+}
+
+.textEmpty {
+  padding: 10px 0 10px 8px;
+}
+
+/* Стили для скелетонов */
+.loading {
+  width: 100%;
+}
+
+.skeletonItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+  width: 100%;
+  border-bottom: 1px dotted var(--color-light-gray);
+}
+
+.skeletonLeft {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  min-width: 0;
+  overflow: hidden;
 }
