--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,9 @@
 :root {
-    --color-white: #ffffff;
+    /* Colors */
+    --color-white: #FFF;
+    --color-light-gray: #CCC;
     --color-rich-black: #171717;
-    --color-golden-yellow: #f7d600;
-    --color-lime-green: #76ff03;
+    --color-golden-yellow: #F7D600;
+    --color-lime-green: #76FF03;
+    --color-vivid-red: #FF4444;
 }
