--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,6 +4,7 @@
     --color-light-gray: #CCC;
     --color-rich-black: #171717;
     --color-golden-yellow: #F7D600;
-    --color-lime-green: #76FF03;
+    --color-light-green: #76FF03;
+    --color-deep-green: #248341;
     --color-vivid-red: #FF4444;
 }
