--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,6 +2,7 @@
     /* Colors */
     --color-white: #FFF;
     --color-light-gray: #CCC;
+    --color-faint-gray: #F5F5F5;
     --color-rich-black: #171717;
     --color-golden-yellow: #F7D600;
     --color-light-green: #76FF03;
