--- a/src/components/Favorite/styles.module.css
+++ b/src/components/Favorite/styles.module.css
@@ -1,7 +1,9 @@
 .favorite {
   margin-right: 16px;
+  opacity: 0.2;
+  transition: opacity 0.2s ease;
 }
 
 .favoriteActive {
-  opacity: 0.2;
+  opacity: 1;
 }
