--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,8 +4,8 @@
     --color-light-gray: #CCC;
     --color-faint-gray: #F5F5F5;
     --color-rich-black: #171717;
-    --color-golden-yellow: #F7D600;
-    --color-light-green: #76FF03;
+    --color-golden-yellow: #FFCB04;
+    --color-light-green: #A6CE38;
     --color-deep-green: #248341;
     --color-vivid-red: #FF4444;
 }
